Step-004/terraform-exercise/http-security-group.tf
locals {
  security_group_name = "http-inbound-traffic"
}

resource "aws_security_group" "http-inbound-traffic" {
  name        = local.security_group_name
  description = "Allow HTTP and HTTPS inbound traffic"
  vpc_id      = aws_vpc.indacloud-stepbystep.id

  ingress {
    description = "HTTPS inbound rule"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP inbound rule"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = local.security_group_name
    Terraform = "true"
  }
}
